# ethid

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py
src/analytics/: beta.py  residuals.py
src/app/: app_logging.py  logging.py  runner.py
src/data/: binance_ws.py  cache.py  storage.py
src/domain/: bars.py  returns.py
tests/integration/: test_external_session_not_closed.py  test_replay_ws.py
tests/unit/: test_bars_parsing.py  test_beta_residuals.py  test_cache.py  test_returns.py  test_ws_url.py
