[project]
name = "ethid"
version = "0.1.0"
description = ""
authors = [
    { name = "viach", email = "gritcaev.vv@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pydantic (>=2.11.9,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "aiohttp>=3.9.0",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg[binary] (>=3.2.10,<4.0.0)",
]

[build-system]
requires = [
    "poetry-core>=2.0.0,<3.0.0",
]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=5.0.0,<6.0.0)",
    "ruff (>=0.13.1,<0.14.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
]

[tool.poetry]
packages = [{ include = "src", from = "." }]

[tool.ruff]
line-length = 119
target-version = "py311"
exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "ANN"]
ignore = ["E203"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

[tool.ruff.lint.isort]
known-first-party = ["src", "ethid"]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
plugins = []

[tool.pytest]
addopts = "-q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
